src/snapshots/ruff__linter__tests__e402.snap
---
source: src/linter.rs
expression: checks
---
- kind: ModuleImportNotAtTopOfFile
  location:
    row: 24
    column: 1
  fix: ~

