src/snapshots/ruff__linter__tests__e501.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    LineTooLong:
      - 123
      - 88
  location:
    row: 5
    column: 89
  fix: ~

