src/snapshots/ruff__linter__tests__e713.snap
---
source: src/linter.rs
expression: checks
---
- kind: NotInTest
  location:
    row: 2
    column: 12
  fix: ~

