src/snapshots/ruff__linter__tests__e714.snap
---
source: src/linter.rs
expression: checks
---
- kind: NotIsTest
  location:
    row: 1
    column: 13
  fix: ~

