src/snapshots/ruff__linter__tests__e721.snap
---
source: src/linter.rs
expression: checks
---
- kind: TypeComparison
  location:
    row: 2
    column: 14
  fix: ~
- kind: TypeComparison
  location:
    row: 5
    column: 14
  fix: ~
- kind: TypeComparison
  location:
    row: 10
    column: 8
  fix: ~
- kind: TypeComparison
  location:
    row: 15
    column: 14
  fix: ~
- kind: TypeComparison
  location:
    row: 18
    column: 18
  fix: ~
- kind: TypeComparison
  location:
    row: 18
    column: 46
  fix: ~
- kind: TypeComparison
  location:
    row: 20
    column: 18
  fix: ~
- kind: TypeComparison
  location:
    row: 22
    column: 18
  fix: ~
- kind: TypeComparison
  location:
    row: 24
    column: 18
  fix: ~
- kind: TypeComparison
  location:
    row: 26
    column: 18
  fix: ~
- kind: TypeComparison
  location:
    row: 28
    column: 18
  fix: ~
- kind: TypeComparison
  location:
    row: 30
    column: 18
  fix: ~
- kind: TypeComparison
  location:
    row: 32
    column: 18
  fix: ~
- kind: TypeComparison
  location:
    row: 34
    column: 18
  fix: ~
- kind: TypeComparison
  location:
    row: 40
    column: 18
  fix: ~
- kind: TypeComparison
  location:
    row: 42
    column: 18
  fix: ~

