src/snapshots/ruff__linter__tests__e722.snap
---
source: src/linter.rs
expression: checks
---
- kind: DoNotUseBareExcept
  location:
    row: 3
    column: 1
  fix: ~

